--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Altyaf Shaikh Portfolio</title>
+    <title>Altaf Shaikh Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -314,7 +314,7 @@
                 <div class="col-md-10 heading-section text-center ftco-animate">
                     <h1 class="big big-2">Resume</h1>
                     <h2 class="mb-4">Resume</h2>
-                    <p>Sinior Feont-end Developer & Graphics Designer with 1+ years of experience in Kunash Media Solutions. Proven expertise in Front-end Developer, Graphics Designiner, UI-UX Designer & Developer and project management.</p>
+                    <p>Sinior Front-end Developer & Graphics Designer with 1+ years of experience in Kunash Media Solutions. Proven expertise in Front-end Developer, Graphics Designiner, UI-UX Designer & Developer and project management.</p>
                 </div>
             </div>
 
@@ -392,7 +392,7 @@
 
         <div class="row justify-content-center mt-5">
             <div class="col-md-6 text-center ftco-animate">
-                <p><a href="https://pdflink.to/fa84060e/" class="btn btn-primary py-4 px-5">Download CV</a></p>
+                <p><a href="https://drive.google.com/file/d/1_cSnyio4t9OwZMPvHJJ-jCdJPBZaabRz/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
             </div>
         </div>
         </div>
@@ -573,7 +573,7 @@
                             <span class="icon-globe"></span>
                         </div>
                         <h3 class="mb-4">Download Resume</h3>
-                        <p><a href="https://pdflink.to/fa84060e/">Altaf Shaikh</a></p>
+                        <p><a href="https://drive.google.com/file/d/1_cSnyio4t9OwZMPvHJJ-jCdJPBZaabRz/view?usp=sharing">Altaf Shaikh</a></p>
                     </div>
                 </div>
 
