--- a/index.html
+++ b/index.html
@@ -411,34 +411,34 @@
             </div>
             <div class="row d-flex">
                 <div class="col-md-4 d-flex ftco-animate">
-                    <div class="blog-entry justify-content-end">
-                        <a href="www.excelgastroandgynaeclinic.com" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+                    <div  class="blog-entry justify-content-end">
+                        <a href="https://excelgastroandgynaeclinic.com/" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
                         </a>
                         <div class="text mt-3 float-right d-block">
 
-                            <h3 class="heading"><a href="www.excelgastroandgynaeclinic.com">Dr. Clinic Website Of gastrologist</a></h3>
+                            <h3 class="heading"><a href="https://excelgastroandgynaeclinic.com/">Dr. Clinic Website Of gastrologist</a></h3>
                             <p>created Doctor Website of gastrologist In Aditya Birla Hospital With Using HTML, Css, Bootstrap, Java-Script.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
-                        <a href="www.drshekharsjointreplacement.com" class="block-20 zoom-effect" style="background-image: url('images/proj.jpg');">
+                        <a href="https://drshekharsjointreplacement.com/" class="block-20 zoom-effect" style="background-image: url('images/proj.jpg');">
                         </a>
                         <div class="text mt-3 float-right d-block">
 
-                            <h3 class="heading"><a href="www.drshekharsjointreplacement.com">Dr. Website of Orthopaedic Using Wordpress</a></h3>
+                            <h3 class="heading"><a href="https://drshekharsjointreplacement.com/">Dr. Website of Orthopaedic Using Wordpress</a></h3>
                             <p>Performed best Website For DR. Chandrashekhar Orthopaedic Doctor website Using Wordpress.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex ftco-animate">
                     <div class="blog-entry">
-                        <a href="www.kunashmedia.com" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+                        <a href="https://kunashmedia.com/" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
                         </a>
                         <div class="text mt-3 float-right d-block">
 
-                            <h3 class="heading"><a href="www.kunashmedia.com">Profetional Digital Marketing And IT Services Company Website Using HTML, CSS, Bootstrap & Java-Script. </a></h3>
+                            <h3 class="heading"><a href="https://kunashmedia.com/">Profetional Digital Marketing And IT Services Company Website Using HTML, CSS, Bootstrap & Java-Script. </a></h3>
                             <p>Designed & Developed Digital Marketing And IT Services Company Website using All Development Languages& Designing Languages.</p>
                         </div>
                     </div>
