--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                     <br>
                     <div class="row justify-content-center">
                         <div class="col-md-7 ftco-animate text-center">
-                            <h2>Have a<span> Question?  </span> <a href="https://forms.gle/auRbwN3ENxKf4RA3A" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
+                            <h2>Have a<span> Question?  </span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdmlPkmmng0NkXH9b_am8Q5eR6-dl8A6OxrBvm8RxG9y2RVFw/viewform?usp=pp_url" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
                         </div>
                     </div>
                     <br>
