--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                                 <br>
                                 <br>
-                                <h2>A Senior Front End Developer And Graphics Designer</h2>
+                                <h2>A Senior Front-End Developer And Graphics Designer</h2>
                                 <!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
                                 <!-- <br> -->
                                 <p><a href="https://www.linkedin.com/in/altaf-shaikh-26a926176?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-primary py-3 px-4">LinkedIn</a>
@@ -214,7 +214,7 @@
                                         <div class="about-info">
                                             <p><span class="title-s">Name: </span> <span>Altaf Shaikh</span></p>
                                             <p><span class="title-s">Job Role: </span> <span>Front-End Development</span></p>
-                                            <p><span class="title-s">Experience: </span> <span>6 Months</span></p>
+                                            <p><span class="title-s">Experience: </span> <span>1 year</span></p>
                                             <p><span class="title-s">Address: </span> <span>Pune, India</span></p>
                                         </div>
                                     </div>
@@ -314,7 +314,7 @@
                 <div class="col-md-10 heading-section text-center ftco-animate">
                     <h1 class="big big-2">Resume</h1>
                     <h2 class="mb-4">Resume</h2>
-                    <p>Sinior Front-end Developer & Graphics Designer with 1+ years of experience in Kunash Media Solutions. Proven expertise in Front-end Developer, Graphics Designiner, UI-UX Designer & Developer and project management.</p>
+                    <p>Senior Front-end Developer & Graphics Designer with 1+ years of experience in Kunash Media Solutions. Proven expertise in Front-end Developer, Graphics Designiner, UI-UX Designer & Developer and project management.</p>
                 </div>
             </div>
 
@@ -343,7 +343,7 @@
                 <div class="col-md-6">
                     <div class="resume-wrap ftco-animate">
                         <span class="date">2022-2023</span>
-                        <h2>Sinior Front-end Developer, Website Developer & Graphics Designer</h2>
+                        <h2>Senior Front-end Developer, Website Developer & Graphics Designer</h2>
                         <span class="position">As A Frelancer</span>
                         <p class="mt-4">I worked as A Freelancer With Uae Client , Help Of Freelancer Website, I have Complted Many Projects in Freelancing.
                             <ul>
@@ -411,7 +411,7 @@
             </div>
             <div class="row d-flex">
                 <div class="col-md-4 d-flex ftco-animate">
-                    <div  class="blog-entry justify-content-end">
+                    <div class="blog-entry justify-content-end">
                         <a href="https://excelgastroandgynaeclinic.com/" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
                         </a>
                         <div class="text mt-3 float-right d-block">
@@ -447,6 +447,19 @@
             <br>
             <!-- added justify-content-center to center align the last two projects -->
             <div class="row d-flex justify-content-center">
+                <div class="col-md-4 d-flex ftco-animate">
+                    <div class="blog-entry justify-content-end">
+                        <a href="https://kunashmedia.github.io/altaf/" class="block-20 zoom-effect" style="background-image: url('images/resort.jpg');">
+                        </a>
+                        <div class="text mt-3 float-right d-block">
+
+                            <h3 class="heading"><a href=" https://kunashmedia.github.io/altaf/">Resort Website for Kunash Resort Near Lonavala, This Website is Completed In June 2024.</a></h3>
+                            <p>This Luxurious Resort Website is Created Using HTML, CSS, Bootstrap, JavaScript and Designed By Using Figma, Adobe Photoshop And Adobe illustrator.</p>
+
+
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
                         <a href="https://altaf-143.github.io/SSComputers/" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
@@ -612,7 +625,7 @@
                         Copyright &copy;
                         <script>
                             document.write(new Date().getFullYear());
-                        </script> All rights reserved | This website is <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Altaf Shaikh</a>
+                        </script> All rights reserved | This website is <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://wa.me/918928982312" target="_blank">Altaf Shaikh</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
