--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
         <div class="row justify-content-center mt-5">
             <div class="col-md-6 text-center ftco-animate">
-                <p><a href="https://drive.google.com/file/d/1_cSnyio4t9OwZMPvHJJ-jCdJPBZaabRz/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+                <p><a href="https://drive.google.com/file/d/1bFWyrq1GbK12gMonjcoOBbELSD1quZeR/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
             </div>
         </div>
         </div>
@@ -586,7 +586,7 @@
                             <span class="icon-globe"></span>
                         </div>
                         <h3 class="mb-4">Download Resume</h3>
-                        <p><a href="https://drive.google.com/file/d/1_cSnyio4t9OwZMPvHJJ-jCdJPBZaabRz/view?usp=sharing">Altaf Shaikh</a></p>
+                        <p><a href="https://drive.google.com/file/d/1bFWyrq1GbK12gMonjcoOBbELSD1quZeR/view?usp=drivesdk">Altaf Shaikh</a></p>
                     </div>
                 </div>
 
